@@ -324,6 +324,8 @@ G_GNUC_EXTENSION
 G_GNUC_CONST
 G_GNUC_PURE
 G_GNUC_MALLOC
+G_GNUC_ALLOC_SIZE
+G_GNUC_ALLOC_SIZE2
 G_GNUC_DEPRECATED
 G_GNUC_NORETURN
 G_GNUC_UNUSED
